🛠 Synced local changes before pulling latest updates

--- a/telecom/Reports/Spark.html
+++ b/telecom/Reports/Spark.html
@@ -35,7 +35,7 @@
 <a href="#"><span class="badge badge-primary"></span></a>
 </li>
 <li class="m-r-10">
-<a href="#"><span class="badge badge-primary">Jul 20, 2025 12:28:06 am</span></a>
+<a href="#"><span class="badge badge-primary">Jul 20, 2025 05:23:55 pm</span></a>
 </li>
 </ul>
 </div>
@@ -92,7 +92,7 @@
           <div class="test-detail">
             <p class="name">Add Customer</p>
             <p class="text-sm">
-              <span>12:28:07 am</span> / <span>00:00:08:850</span>
+              <span>5:23:56 pm</span> / <span>00:00:08:717</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -101,9 +101,9 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-pass">Add Customer</h5>
-<span class='badge badge-success'>07.20.2025 12:28:07 am</span>
-<span class='badge badge-danger'>07.20.2025 12:28:16 am</span>
-<span class='badge badge-default'>00:00:08:850</span>
+<span class='badge badge-success'>07.20.2025 5:23:56 pm</span>
+<span class='badge badge-danger'>07.20.2025 5:24:04 pm</span>
+<span class='badge badge-default'>00:00:08:717</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=1</span>
 <span title='Skip to the next failed step' class='badge badge-danger pointer float-right ne ml-1'><i class="fa fa-fast-forward"></i></span>
 <span title='Collapse all nodes' class='badge badge-default pointer float-right ct ml-1'><i class="fa fa-compress"></i></span>
@@ -190,7 +190,7 @@
           <div class="test-detail">
             <p class="name">Add Tariff Plan</p>
             <p class="text-sm">
-              <span>12:28:16 am</span> / <span>00:00:03:994</span>
+              <span>5:24:04 pm</span> / <span>00:00:02:998</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -199,9 +199,9 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-pass">Add Tariff Plan</h5>
-<span class='badge badge-success'>07.20.2025 12:28:16 am</span>
-<span class='badge badge-danger'>07.20.2025 12:28:20 am</span>
-<span class='badge badge-default'>00:00:03:994</span>
+<span class='badge badge-success'>07.20.2025 5:24:04 pm</span>
+<span class='badge badge-danger'>07.20.2025 5:24:07 pm</span>
+<span class='badge badge-default'>00:00:02:998</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=17</span>
 <span title='Skip to the next failed step' class='badge badge-danger pointer float-right ne ml-1'><i class="fa fa-fast-forward"></i></span>
 <span title='Collapse all nodes' class='badge badge-default pointer float-right ct ml-1'><i class="fa fa-compress"></i></span>
@@ -252,7 +252,7 @@
           <div class="test-detail">
             <p class="name">Assign Tariff Plan to Customer</p>
             <p class="text-sm">
-              <span>12:28:20 am</span> / <span>00:00:03:919</span>
+              <span>5:24:07 pm</span> / <span>00:00:03:342</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -261,9 +261,9 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-pass">Assign Tariff Plan to Customer</h5>
-<span class='badge badge-success'>07.20.2025 12:28:20 am</span>
-<span class='badge badge-danger'>07.20.2025 12:28:24 am</span>
-<span class='badge badge-default'>00:00:03:919</span>
+<span class='badge badge-success'>07.20.2025 5:24:07 pm</span>
+<span class='badge badge-danger'>07.20.2025 5:24:11 pm</span>
+<span class='badge badge-default'>00:00:03:342</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=25</span>
 <span title='Skip to the next failed step' class='badge badge-danger pointer float-right ne ml-1'><i class="fa fa-fast-forward"></i></span>
 <span title='Collapse all nodes' class='badge badge-default pointer float-right ct ml-1'><i class="fa fa-compress"></i></span>
@@ -314,7 +314,7 @@
           <div class="test-detail">
             <p class="name">Generate Invoice</p>
             <p class="text-sm">
-              <span>12:28:24 am</span> / <span>00:00:03:196</span>
+              <span>5:24:11 pm</span> / <span>00:00:04:036</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -323,9 +323,9 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-pass">Generate Invoice</h5>
-<span class='badge badge-success'>07.20.2025 12:28:24 am</span>
-<span class='badge badge-danger'>07.20.2025 12:28:27 am</span>
-<span class='badge badge-default'>00:00:03:196</span>
+<span class='badge badge-success'>07.20.2025 5:24:11 pm</span>
+<span class='badge badge-danger'>07.20.2025 5:24:15 pm</span>
+<span class='badge badge-default'>00:00:04:036</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=33</span>
 <span title='Skip to the next failed step' class='badge badge-danger pointer float-right ne ml-1'><i class="fa fa-fast-forward"></i></span>
 <span title='Collapse all nodes' class='badge badge-default pointer float-right ct ml-1'><i class="fa fa-compress"></i></span>
@@ -371,7 +371,7 @@
           <div class="test-detail">
             <p class="name">Pay Billing</p>
             <p class="text-sm">
-              <span>12:28:27 am</span> / <span>00:00:03:273</span>
+              <span>5:24:15 pm</span> / <span>00:00:03:055</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -380,9 +380,9 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-pass">Pay Billing</h5>
-<span class='badge badge-success'>07.20.2025 12:28:27 am</span>
-<span class='badge badge-danger'>07.20.2025 12:28:30 am</span>
-<span class='badge badge-default'>00:00:03:273</span>
+<span class='badge badge-success'>07.20.2025 5:24:15 pm</span>
+<span class='badge badge-danger'>07.20.2025 5:24:18 pm</span>
+<span class='badge badge-default'>00:00:03:055</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=40</span>
 <span title='Skip to the next failed step' class='badge badge-danger pointer float-right ne ml-1'><i class="fa fa-fast-forward"></i></span>
 <span title='Collapse all nodes' class='badge badge-default pointer float-right ct ml-1'><i class="fa fa-compress"></i></span>
@@ -467,7 +467,7 @@
 <tbody>
 <tr class="tag-test-status" status="pass">
 <td><span class="badge log pass-bg">Pass</span></td>
-<td>00:28:20 am</td>
+<td>17:24:07 pm</td>
 <td>
 <a href="#" class="linked" test-id='25' id='26'>Successfully assign a tariff plan to a customer</a>
 <div class="">
@@ -492,13 +492,13 @@
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Started</p>
-<h3>Jul 20, 2025 12:28:06 am</h3>
+<h3>Jul 20, 2025 05:23:55 pm</h3>
 </div></div>
 </div>
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Ended</p>
-<h3>Jul 20, 2025 12:28:30 am</h3>
+<h3>Jul 20, 2025 05:24:18 pm</h3>
 </div></div>
 </div>
 <div class="col-md-3">
@@ -588,7 +588,7 @@
 </div></div>
 <script>
 var timeline = {
-"Add Customer":8.85,"Add Tariff Plan":3.994,"Assign Tariff Plan to Customer":3.919,"Generate Invoice":3.196,"Pay Billing":3.273
+"Add Customer":8.717,"Add Tariff Plan":2.998,"Assign Tariff Plan to Customer":3.342,"Generate Invoice":4.036,"Pay Billing":3.055
 };
 </script>
 <div class="row">
